# bugbug

./: docker-compose.yml  pyproject.toml
agents/autowebcompat/: Dockerfile  compose.yml  hackbot.toml  pyproject.toml
agents/autowebcompat-diagnosis/: Dockerfile  README.md  bugs-large.json  bugs.json  compose.yml  hackbot.toml  package-lock.json  package.json  pyproject.toml
agents/autowebcompat-diagnosis/hackbot_agents/autowebcompat_diagnosis/: __main__.py  agent.py  broker.py  browser.py  mcp_servers.py  result.py
agents/autowebcompat-diagnosis/results/batch-claude/: 2040305-default.html  2040305-default.repro.mjs  (+1 more)
agents/autowebcompat-repro/: Dockerfile  compose.yml  pyproject.toml
agents/autowebcompat/scripts/: install-firefox-nightly.sh
agents/bug-fix/: Dockerfile
agents/bug-fix/agent_runner/: __main__.py
agents/bug-fix/scripts/: install-firefox-nightly.sh
agents/webcompat-triage/: Dockerfile  compose.yml  hackbot.toml  pyproject.toml
bugbug/: feature_cleanup.py  github.py  github_dbs_config.py  model.py  report_features.py
bugbug/models/: __init__.py  invalid.py  needsdiagnosis.py
bugbug/tools/bug_fix/: __main__.py  agent.py  config.py  devtools_mcp.py
libs/hackbot-runtime/: pyproject.toml
libs/hackbot-runtime/hackbot_runtime/: claude.py  providers.py
libs/hackbot-runtime/hackbot_runtime/backends/: __init__.py  base.py  claude_backend.py  codex_backend.py
scripts/: github_issue_retriever.py  report_classifier.py
services/hackbot-api/app/: agents.py  schemas.py
tests/: conftest.py  test_feature_cleanup.py  test_invalid.py
(+62 files in other folders)
